// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should be able to parse delete SQL 1`] = `
[
  {
    "Delete": {
      "from": {
        "WithFromKeyword": [
          {
            "joins": [],
            "relation": {
              "Table": {
                "alias": undefined,
                "args": undefined,
                "index_hints": [],
                "json_path": undefined,
                "name": [
                  {
                    "Identifier": {
                      "quote_style": undefined,
                      "span": {
                        "end": {
                          "column": 18,
                          "line": 1,
                        },
                        "start": {
                          "column": 13,
                          "line": 1,
                        },
                      },
                      "value": "users",
                    },
                  },
                ],
                "partitions": [],
                "sample": undefined,
                "version": undefined,
                "with_hints": [],
                "with_ordinality": false,
              },
            },
          },
        ],
      },
      "limit": undefined,
      "order_by": [],
      "returning": undefined,
      "selection": {
        "BinaryOp": {
          "left": {
            "Identifier": {
              "quote_style": undefined,
              "span": {
                "end": {
                  "column": 27,
                  "line": 1,
                },
                "start": {
                  "column": 25,
                  "line": 1,
                },
              },
              "value": "id",
            },
          },
          "op": "Eq",
          "right": {
            "Value": {
              "span": {
                "end": {
                  "column": 31,
                  "line": 1,
                },
                "start": {
                  "column": 30,
                  "line": 1,
                },
              },
              "value": {
                "Number": [
                  "2",
                  false,
                ],
              },
            },
          },
        },
      },
      "tables": [],
      "using": undefined,
    },
  },
]
`;

exports[`should be able to parse insert SQL 1`] = `
[
  {
    "Insert": {
      "after_columns": [],
      "assignments": [],
      "columns": [
        {
          "quote_style": undefined,
          "span": {
            "end": {
              "column": 22,
              "line": 1,
            },
            "start": {
              "column": 20,
              "line": 1,
            },
          },
          "value": "id",
        },
        {
          "quote_style": undefined,
          "span": {
            "end": {
              "column": 28,
              "line": 1,
            },
            "start": {
              "column": 24,
              "line": 1,
            },
          },
          "value": "name",
        },
      ],
      "format_clause": undefined,
      "has_table_keyword": false,
      "ignore": false,
      "insert_alias": undefined,
      "into": true,
      "on": undefined,
      "or": undefined,
      "overwrite": false,
      "partitioned": undefined,
      "priority": undefined,
      "replace_into": false,
      "returning": undefined,
      "settings": undefined,
      "source": {
        "body": {
          "Values": {
            "explicit_row": false,
            "rows": [
              [
                {
                  "Value": {
                    "span": {
                      "end": {
                        "column": 39,
                        "line": 1,
                      },
                      "start": {
                        "column": 38,
                        "line": 1,
                      },
                    },
                    "value": {
                      "Number": [
                        "1",
                        false,
                      ],
                    },
                  },
                },
                {
                  "Value": {
                    "span": {
                      "end": {
                        "column": 48,
                        "line": 1,
                      },
                      "start": {
                        "column": 41,
                        "line": 1,
                      },
                    },
                    "value": {
                      "SingleQuotedString": "Alice",
                    },
                  },
                },
              ],
              [
                {
                  "Value": {
                    "span": {
                      "end": {
                        "column": 53,
                        "line": 1,
                      },
                      "start": {
                        "column": 52,
                        "line": 1,
                      },
                    },
                    "value": {
                      "Number": [
                        "2",
                        false,
                      ],
                    },
                  },
                },
                {
                  "Value": {
                    "span": {
                      "end": {
                        "column": 60,
                        "line": 1,
                      },
                      "start": {
                        "column": 55,
                        "line": 1,
                      },
                    },
                    "value": {
                      "SingleQuotedString": "Bob",
                    },
                  },
                },
              ],
            ],
          },
        },
        "fetch": undefined,
        "for_clause": undefined,
        "format_clause": undefined,
        "limit_clause": undefined,
        "locks": [],
        "order_by": undefined,
        "pipe_operators": [],
        "settings": undefined,
        "with": undefined,
      },
      "table": {
        "TableName": [
          {
            "Identifier": {
              "quote_style": undefined,
              "span": {
                "end": {
                  "column": 18,
                  "line": 1,
                },
                "start": {
                  "column": 13,
                  "line": 1,
                },
              },
              "value": "users",
            },
          },
        ],
      },
      "table_alias": undefined,
    },
  },
]
`;

exports[`should be able to parse joins 1`] = `
[
  {
    "Query": {
      "body": {
        "Select": {
          "cluster_by": [],
          "connect_by": undefined,
          "distinct": undefined,
          "distribute_by": [],
          "exclude": undefined,
          "flavor": "Standard",
          "from": [
            {
              "joins": [
                {
                  "global": false,
                  "join_operator": {
                    "Inner": {
                      "On": {
                        "BinaryOp": {
                          "left": {
                            "CompoundIdentifier": [
                              {
                                "quote_style": undefined,
                                "span": {
                                  "end": {
                                    "column": 47,
                                    "line": 1,
                                  },
                                  "start": {
                                    "column": 42,
                                    "line": 1,
                                  },
                                },
                                "value": "users",
                              },
                              {
                                "quote_style": undefined,
                                "span": {
                                  "end": {
                                    "column": 50,
                                    "line": 1,
                                  },
                                  "start": {
                                    "column": 48,
                                    "line": 1,
                                  },
                                },
                                "value": "id",
                              },
                            ],
                          },
                          "op": "Eq",
                          "right": {
                            "CompoundIdentifier": [
                              {
                                "quote_style": undefined,
                                "span": {
                                  "end": {
                                    "column": 59,
                                    "line": 1,
                                  },
                                  "start": {
                                    "column": 53,
                                    "line": 1,
                                  },
                                },
                                "value": "orders",
                              },
                              {
                                "quote_style": undefined,
                                "span": {
                                  "end": {
                                    "column": 67,
                                    "line": 1,
                                  },
                                  "start": {
                                    "column": 60,
                                    "line": 1,
                                  },
                                },
                                "value": "user_id",
                              },
                            ],
                          },
                        },
                      },
                    },
                  },
                  "relation": {
                    "Table": {
                      "alias": undefined,
                      "args": undefined,
                      "index_hints": [],
                      "json_path": undefined,
                      "name": [
                        {
                          "Identifier": {
                            "quote_style": undefined,
                            "span": {
                              "end": {
                                "column": 38,
                                "line": 1,
                              },
                              "start": {
                                "column": 32,
                                "line": 1,
                              },
                            },
                            "value": "orders",
                          },
                        },
                      ],
                      "partitions": [],
                      "sample": undefined,
                      "version": undefined,
                      "with_hints": [],
                      "with_ordinality": false,
                    },
                  },
                },
              ],
              "relation": {
                "Table": {
                  "alias": undefined,
                  "args": undefined,
                  "index_hints": [],
                  "json_path": undefined,
                  "name": [
                    {
                      "Identifier": {
                        "quote_style": undefined,
                        "span": {
                          "end": {
                            "column": 20,
                            "line": 1,
                          },
                          "start": {
                            "column": 15,
                            "line": 1,
                          },
                        },
                        "value": "users",
                      },
                    },
                  ],
                  "partitions": [],
                  "sample": undefined,
                  "version": undefined,
                  "with_hints": [],
                  "with_ordinality": false,
                },
              },
            },
          ],
          "group_by": {
            "Expressions": [
              [],
              [],
            ],
          },
          "having": undefined,
          "into": undefined,
          "lateral_views": [],
          "named_window": [],
          "prewhere": undefined,
          "projection": [
            {
              "Wildcard": {
                "opt_except": undefined,
                "opt_exclude": undefined,
                "opt_ilike": undefined,
                "opt_rename": undefined,
                "opt_replace": undefined,
                "wildcard_token": {
                  "span": {
                    "end": {
                      "column": 9,
                      "line": 1,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                    },
                  },
                  "token": "Mul",
                },
              },
            },
          ],
          "qualify": undefined,
          "select_token": {
            "span": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 1,
                "line": 1,
              },
            },
            "token": {
              "Word": {
                "keyword": "SELECT",
                "quote_style": undefined,
                "value": "SELECT",
              },
            },
          },
          "selection": undefined,
          "sort_by": [],
          "top": undefined,
          "top_before_distinct": false,
          "value_table_mode": undefined,
          "window_before_qualify": false,
        },
      },
      "fetch": undefined,
      "for_clause": undefined,
      "format_clause": undefined,
      "limit_clause": undefined,
      "locks": [],
      "order_by": undefined,
      "pipe_operators": [],
      "settings": undefined,
      "with": undefined,
    },
  },
]
`;

exports[`should be able to parse some SQL 1`] = `
[
  {
    "Query": {
      "body": {
        "Select": {
          "cluster_by": [],
          "connect_by": undefined,
          "distinct": undefined,
          "distribute_by": [],
          "exclude": undefined,
          "flavor": "Standard",
          "from": [
            {
              "joins": [],
              "relation": {
                "Table": {
                  "alias": undefined,
                  "args": undefined,
                  "index_hints": [],
                  "json_path": undefined,
                  "name": [
                    {
                      "Identifier": {
                        "quote_style": undefined,
                        "span": {
                          "end": {
                            "column": 20,
                            "line": 1,
                          },
                          "start": {
                            "column": 15,
                            "line": 1,
                          },
                        },
                        "value": "users",
                      },
                    },
                  ],
                  "partitions": [],
                  "sample": undefined,
                  "version": undefined,
                  "with_hints": [],
                  "with_ordinality": false,
                },
              },
            },
          ],
          "group_by": {
            "Expressions": [
              [],
              [],
            ],
          },
          "having": undefined,
          "into": undefined,
          "lateral_views": [],
          "named_window": [],
          "prewhere": undefined,
          "projection": [
            {
              "Wildcard": {
                "opt_except": undefined,
                "opt_exclude": undefined,
                "opt_ilike": undefined,
                "opt_rename": undefined,
                "opt_replace": undefined,
                "wildcard_token": {
                  "span": {
                    "end": {
                      "column": 9,
                      "line": 1,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                    },
                  },
                  "token": "Mul",
                },
              },
            },
          ],
          "qualify": undefined,
          "select_token": {
            "span": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 1,
                "line": 1,
              },
            },
            "token": {
              "Word": {
                "keyword": "SELECT",
                "quote_style": undefined,
                "value": "SELECT",
              },
            },
          },
          "selection": undefined,
          "sort_by": [],
          "top": undefined,
          "top_before_distinct": false,
          "value_table_mode": undefined,
          "window_before_qualify": false,
        },
      },
      "fetch": undefined,
      "for_clause": undefined,
      "format_clause": undefined,
      "limit_clause": undefined,
      "locks": [],
      "order_by": undefined,
      "pipe_operators": [],
      "settings": undefined,
      "with": undefined,
    },
  },
]
`;

exports[`should be able to parse update SQL 1`] = `
[
  {
    "Update": {
      "assignments": [
        {
          "target": {
            "ColumnName": [
              {
                "Identifier": {
                  "quote_style": undefined,
                  "span": {
                    "end": {
                      "column": 22,
                      "line": 1,
                    },
                    "start": {
                      "column": 18,
                      "line": 1,
                    },
                  },
                  "value": "name",
                },
              },
            ],
          },
          "value": {
            "Value": {
              "span": {
                "end": {
                  "column": 34,
                  "line": 1,
                },
                "start": {
                  "column": 25,
                  "line": 1,
                },
              },
              "value": {
                "SingleQuotedString": "Charlie",
              },
            },
          },
        },
      ],
      "from": undefined,
      "limit": undefined,
      "or": undefined,
      "returning": undefined,
      "selection": {
        "BinaryOp": {
          "left": {
            "Identifier": {
              "quote_style": undefined,
              "span": {
                "end": {
                  "column": 43,
                  "line": 1,
                },
                "start": {
                  "column": 41,
                  "line": 1,
                },
              },
              "value": "id",
            },
          },
          "op": "Eq",
          "right": {
            "Value": {
              "span": {
                "end": {
                  "column": 47,
                  "line": 1,
                },
                "start": {
                  "column": 46,
                  "line": 1,
                },
              },
              "value": {
                "Number": [
                  "1",
                  false,
                ],
              },
            },
          },
        },
      },
      "table": {
        "joins": [],
        "relation": {
          "Table": {
            "alias": undefined,
            "args": undefined,
            "index_hints": [],
            "json_path": undefined,
            "name": [
              {
                "Identifier": {
                  "quote_style": undefined,
                  "span": {
                    "end": {
                      "column": 13,
                      "line": 1,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                    },
                  },
                  "value": "users",
                },
              },
            ],
            "partitions": [],
            "sample": undefined,
            "version": undefined,
            "with_hints": [],
            "with_ordinality": false,
          },
        },
      },
    },
  },
]
`;

exports[`should support parameterized queries 1`] = `
[
  {
    "Query": {
      "body": {
        "Select": {
          "cluster_by": [],
          "connect_by": undefined,
          "distinct": undefined,
          "distribute_by": [],
          "exclude": undefined,
          "flavor": "Standard",
          "from": [
            {
              "joins": [],
              "relation": {
                "Table": {
                  "alias": undefined,
                  "args": undefined,
                  "index_hints": [],
                  "json_path": undefined,
                  "name": [
                    {
                      "Identifier": {
                        "quote_style": undefined,
                        "span": {
                          "end": {
                            "column": 20,
                            "line": 1,
                          },
                          "start": {
                            "column": 15,
                            "line": 1,
                          },
                        },
                        "value": "users",
                      },
                    },
                  ],
                  "partitions": [],
                  "sample": undefined,
                  "version": undefined,
                  "with_hints": [],
                  "with_ordinality": false,
                },
              },
            },
          ],
          "group_by": {
            "Expressions": [
              [],
              [],
            ],
          },
          "having": undefined,
          "into": undefined,
          "lateral_views": [],
          "named_window": [],
          "prewhere": undefined,
          "projection": [
            {
              "Wildcard": {
                "opt_except": undefined,
                "opt_exclude": undefined,
                "opt_ilike": undefined,
                "opt_rename": undefined,
                "opt_replace": undefined,
                "wildcard_token": {
                  "span": {
                    "end": {
                      "column": 9,
                      "line": 1,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                    },
                  },
                  "token": "Mul",
                },
              },
            },
          ],
          "qualify": undefined,
          "select_token": {
            "span": {
              "end": {
                "column": 7,
                "line": 1,
              },
              "start": {
                "column": 1,
                "line": 1,
              },
            },
            "token": {
              "Word": {
                "keyword": "SELECT",
                "quote_style": undefined,
                "value": "SELECT",
              },
            },
          },
          "selection": {
            "BinaryOp": {
              "left": {
                "Identifier": {
                  "quote_style": undefined,
                  "span": {
                    "end": {
                      "column": 29,
                      "line": 1,
                    },
                    "start": {
                      "column": 27,
                      "line": 1,
                    },
                  },
                  "value": "id",
                },
              },
              "op": "Eq",
              "right": {
                "Value": {
                  "span": {
                    "end": {
                      "column": 33,
                      "line": 1,
                    },
                    "start": {
                      "column": 32,
                      "line": 1,
                    },
                  },
                  "value": {
                    "Placeholder": "?",
                  },
                },
              },
            },
          },
          "sort_by": [],
          "top": undefined,
          "top_before_distinct": false,
          "value_table_mode": undefined,
          "window_before_qualify": false,
        },
      },
      "fetch": undefined,
      "for_clause": undefined,
      "format_clause": undefined,
      "limit_clause": undefined,
      "locks": [],
      "order_by": undefined,
      "pipe_operators": [],
      "settings": undefined,
      "with": undefined,
    },
  },
]
`;
